# costly

./: README.md  pyproject.toml
src/costly/statements/: banks.py  reader.py  statement.py
tests/: test_reader.py
