[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "CostLy"
dynamic = ["version"]
requires-python = ">= 3.10"
dependencies = [
    "pandas==2.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.2",
    "mypy==1.5",
]

[tool.setuptools.dynamic]
version = {attr = "congol.__version__"}